--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@types/axios": "^0.14.0",
     "axios": "^1.6.7",
+    "express": "^4.18.3",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,8 @@
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^3.0.0",
+    "json-server": "^1.0.0-alpha.23",
+    "json-server-auth": "^2.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
