--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "challenge-atoscapital-reactjs",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@types/axios": "^0.14.0",
-    "axios": "^1.6.7",
-    "express": "^4.18.3",
-    "framer-motion": "^11.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.0",
-    "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@types/styled-components": "^5.1.34",
-    "@vitejs/plugin-react": "^3.0.0",
-    "json-server": "^1.0.0-alpha.23",
-    "json-server-auth": "^2.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
-  }
+	"name": "challenge-atoscapital-reactjs",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.0",
+		"@hookform/resolvers": "^3.3.4",
+		"@types/axios": "^0.14.0",
+		"axios": "^1.6.7",
+		"express": "^4.18.3",
+		"framer-motion": "^11.0.8",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.0",
+		"react-router-dom": "^6.22.3",
+		"styled-components": "^6.1.8",
+		"yup": "^1.4.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"@types/styled-components": "^5.1.34",
+		"@vitejs/plugin-react": "^3.0.0",
+		"json-server": "^1.0.0-alpha.23",
+		"json-server-auth": "^2.1.0",
+		"sass": "^1.71.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0"
+	}
 }
