--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"axios": "^1.6.7",
 		"express": "^4.18.3",
 		"framer-motion": "^11.0.8",
+		"json-server": "^0.16.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
@@ -31,7 +32,6 @@
 		"@types/react-dom": "^18.0.9",
 		"@types/styled-components": "^5.1.34",
 		"@vitejs/plugin-react": "^3.0.0",
-		"json-server": "^1.0.0-alpha.23",
 		"json-server-auth": "^2.1.0",
 		"sass": "^1.71.1",
 		"typescript": "^4.9.3",
