--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@hookform/resolvers": "^3.3.4",
 		"@types/axios": "^0.14.0",
+		"@types/react-input-mask": "^3.0.5",
 		"axios": "^1.6.7",
 		"express": "^4.18.3",
 		"framer-motion": "^11.0.8",
@@ -22,6 +23,7 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
 		"react-icons": "^5.0.1",
+		"react-input-mask": "^2.0.4",
 		"react-router-dom": "^6.22.3",
 		"react-toastify": "^10.0.4",
 		"styled-components": "^6.1.8",
